--- a/package.json
+++ b/package.json
@@ -100,7 +100,7 @@
       "tests/**"
     ]
   },
-  "prettier": "@adonisjs/prettier-config",
+  "prettier": "@arapucajs/prettier",
   "dependencies": {
     "@poppinss/colors": "^4.1.5",
     "jest-diff": "^30.2.0",
