--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,15 +1,22 @@
 name: checks
 on:
-  - push
-  - pull_request
-  - workflow_call
+  pull_request:
+    branches:
+      - main
 
 jobs:
+  typecheck:
+    name: typecheck
+    uses: t8ngs/.github/.github/workflows/typecheck.yml@main
+  lint:
+    needs: typecheck
+    name: lint
+    uses: t8ngs/.github/.github/workflows/lint.yml@main
   test:
+    needs: lint
+    name: test
     uses: t8ngs/.github/.github/workflows/test.yml@main
 
-  lint:
-    uses: t8ngs/.github/.github/workflows/lint.yml@main
 
-  typecheck:
-    uses: t8ngs/.github/.github/workflows/typecheck.yml@main
+
+
